<resources>
    <string name="app_name">NetInfo</string>
    <string name="refresh">Refresh</string>
    <string name="refreshSwitchText">Auto\nRefresh</string>
    <string name="hyphen">-</string>

    <!--Current cell info-->
    <string name="country">Country:</string>
    <string name="operator">Operator:</string>
    <string name="cellType">Cell type:</string>
    <string name="cellLAC">LAC:</string>
    <string name="cellCID">CID:</string>
</resources>
